// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GuessLetter component Should render correctly 1`] = `
<div>
  <div
    class="w-full flex items-center justify-center font-bold aspect-square rounded-md text-4xl bg-brown-100"
    role="guess"
  >
    T
  </div>
</div>
`;

exports[`GuessLetter component Should render correctly if it's active 1`] = `
<div>
  <div
    class="w-full flex items-center justify-center font-bold aspect-square rounded-md text-4xl bg-brown-100 !border-b-[10px]"
    role="guess"
  >
    T
  </div>
</div>
`;
